# title-generator

./: pyproject.toml  requirements.txt  streamlit.py
core/: pipeline.py
core/generator/: algo.py  llm.py  prompt.py
