[project]
name = "title-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "natasha>=1.6.0",
    "nltk>=3.9.2",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "sortedcontainers>=2.4.0",
    "streamlit>=1.52.2",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["my_package"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
